# projectm

./: .gitignore  CMAKE_IPC_INTEGRATION.md  CMakeLists.txt  COMPLETE_FILE_LISTING.md  CSHARP_PATTERNS_AND_EXAMPLES.md  CSharpIPCClient_Example.cs  CSharpWinformsUI_Example.cs  DELIVERY_SUMMARY.md  FINAL_DELIVERY_REPORT.md  IPC_COMMUNICATION_GUIDE.md  IPC_IMPLEMENTATION_SUMMARY.md  IPC_QUICKSTART.md  IPC_SYSTEM_FILES_INDEX.md  README.md  README_IPC.md  START_HERE.md  VISUAL_DIAGRAMS.md  build_out.txt  config_output.txt  imgui.ini  vcpkg.json
src/: CMakeLists.txt
src/libprojectM/Renderer/: TextureManager.cpp  TextureManager.hpp
src/lvs-ui/: CMakeLists.txt  audio_loader.cpp  audio_preview_manager.hpp  ipc_communication.cpp  ipc_manager.cpp  ipc_manager.hpp  loopback.cpp  loopback.hpp  pmSDL.cpp  pmSDL.hpp  preset_queue_manager.hpp  projectM_SDL_main.cpp  setup.cpp  stb_image_write_impl.cpp
src/sdl-test-ui/: CMakeLists.txt  README_ENHANCEMENTS.md  audio_preview_manager.cpp  debug_ipc_ui.cpp  debug_ipc_ui.hpp  font8x8_basic.h  ipc_communication.cpp  ipc_communication.hpp  ipc_manager.cpp  ipc_manager.hpp  ipc_test.cpp  logging.cpp  logging.hpp  loopback.cpp  pmSDL.cpp  pmSDL.hpp  preset_queue_manager.cpp  preset_queue_manager.hpp  projectM_SDL_main.cpp  setup.cpp  setup.hpp  startup_timing.hpp  stb_image_write.cpp  stb_image_write.h  text_render.cpp  text_render.h
